MLDS-731 - fixed icon/link alignment

--- a/src/main/theme/less/theme.less
+++ b/src/main/theme/less/theme.less
@@ -241,6 +241,7 @@
 	padding-top: 10px;
 	text-align: center;
 	font-weight: @btn-font-weight;
+	cursor: none;
 }
 
 .version-title{
@@ -427,4 +428,12 @@ footer[role=admin]{
 .btn-space{
 	position:relative;
 	bottom:10px;
+}
+
+.file-download{
+	a{
+		position: relative;
+		bottom:25px;
+		left: 5px;
+	}
 }
